--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 # dependencies
 /node_modules
 /server/node_modules
+/server/.env
 /client/node_modules
+/client/.env
 /.pnp
 .pnp.js
 
@@ -15,6 +17,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
